//
//  AlertMessages.swift
//  TaskManager
//
//  Created by Janaina A on 26/02/2025.
//

import Foundation

struct AlertMessages {
    static var titleEmptyAlert         = "Please enter the Title"
    static var taskListEmptyAlert      = "You haven't added any tasks yet!"
    static let deleteAlert             = "Are you sure you want to delete?"
    static let completeAlert           = "Are you sure you want to mark this as completed?"

}
