...
                .shadow(color: Color.black.opacity(0.3), radius: 4, x: 0, y: 0)
                .scaleEffect(animate ? 1.3 : 1.0)
                .animation(.easeOut(duration: animationDuration), value: animate)
        }
        .padding()
        .zIndex(1)
        .accessibilityIdentifier("AddTaskButton")
        .accessibilityValue(isAnimating ? "Animating" : "Normal")
    }
}

struct EmptyTaskView: View {
    var body: some View {
...
                }
            }) {
                Image(systemName: "slider.horizontal.3")
                    .font(.title2)
                    .foregroundColor(.primary)
            }
            .accessibilityIdentifier("FilterButton")
        }
        .padding(.bottom, 15)
        .padding(.trailing, 20)
    }
}

...
